<resources>
    <string name="app_name">Lunch Ordering</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="submit">Submit</string>
    <string name="order_summary">order Summary</string>
    <string name="submit_order">Submit Order</string>
    <string name="subtotal">Subtotal %s</string>
    <string name="total">Total %s </string>
    <string name="tax">Tax %s </string>
    <string name="accompaniment">Accompaniment Food</string>
    <string name="checkout">Check Out</string>
    <string name="select_entree">Select Food</string>
    <string name="sidemenu">Side Menu Food</string>
    <string name="startmenu">Start Menu</string>
</resources>